k8s/db/ingress-db.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: middleware
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /banco
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress-banco
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: banco-middleware@kubernetescrd
spec:
  tls:
  - hosts:
    - hinsch.com.br
  rules:
    - host: hinsch.com.br
      http:
        paths:
        - path: /banco
          pathType: Prefix
          backend:
            service:
              name: banco
              port:
                number: 80
